Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122982

assertion failure while reading markdown file that contains front matter but is otherwise empty

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.0 FF
    • 6.8
    • GUI: Text handling
    • None
    • d14eec536 (dev)

    Description

      4   qAbort                        qglobal.cpp                161 
      5   qt_message_fatal<QString&>    qlogging.cpp               2060
      6   qt_message                    qlogging.cpp               374 
      7   QMessageLogger::fatal         qlogging.cpp               897 
      8   qt_assert                     qassert.cpp                68  
      9   QByteArray::verify            qbytearray.h               579 
      10  QByteArray::at                qbytearray.h               613 
      11  QTextMarkdownImporter::import qtextmarkdownimporter.cpp  151 
      12  QTextDocument::setMarkdown    qtextdocument.cpp          3607
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes